tests/ui/parser/issues/issue-114219.stderr
error: `async move` blocks are only allowed in Rust 2018 or later
  --> $DIR/issue-114219.rs:4:5
   |
LL |     async move {};
   |     ^^^^^^^^^^

error: aborting due to 1 previous error

